--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "styled-components": "^6.1.13",
+    "swiper": "^11.2.1",
     "swr": "^2.2.5"
   },
   "devDependencies": {
