--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-hook-form": "^7.53.0",
     "styled-components": "^6.1.13",
     "swiper": "^11.2.1",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@headlessui/react": "^2.2.0",
