--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-proxy-middleware": "^3.0.3",
     "jotai": "^2.10.1",
     "next": "14.2.15",
+    "puppeteer": "^24.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
