--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/runtime": "^7.25.7",
     "@svgr/cli": "^8.1.0",
     "babel-plugin-styled-components": "^2.1.4",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "eslint-config-next": "^14.2.15",
     "http-proxy-middleware": "^3.0.3",
@@ -23,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.13",
     "swiper": "^11.2.1",
     "swr": "^2.2.5",
