--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-BASE_URL=http://34.64.182.4:8080/api/v1
-API_HOST=http://34.64.182.4:8080/api/v1
+BASE_URL=https://sisso-api.shop/api/v1
+API_HOST=https://sisso-api.shop/api/v1
+# BASE_URL=http://34.64.182.4:8080/api/v1
+# API_HOST=http://34.64.182.4:8080/api/v1
 API_GPT_KEY=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
 
